6 Routing mit lokalem getSingle()

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<nav>
+  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
+  <a routerLink="/books" routerLinkActive="active" ariaCurrentWhenActive="page">Books</a>
+</nav>
+
 <main>
-  <app-book-list></app-book-list>
+  <router-outlet></router-outlet>
 </main>
