--- a/src/app/books/book-list-item/book-list-item.component.html
+++ b/src/app/books/book-list-item/book-list-item.component.html
@@ -15,4 +15,5 @@
   </ul>
   <div>ISBN {{ b.isbn }}</div>
   <button (click)="addToFavs()">♥️ Favorite</button>
+  <a [routerLink]="b.isbn">Details</a>
 </div>
