--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<nav>
-  <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
-  <a routerLink="/books" routerLinkActive="active" ariaCurrentWhenActive="page">Books</a>
-  <a routerLink="/admin" routerLinkActive="active" ariaCurrentWhenActive="page">Administration</a>
-</nav>
-
 <main>
+  <nav>
+    <ul>
+      <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
+      <li><a routerLink="/books" routerLinkActive="active" ariaCurrentWhenActive="page">Books</a></li>
+      <li><a routerLink="/admin" routerLinkActive="active" ariaCurrentWhenActive="page">Administration</a></li>
+    </ul>
+  </nav>
   <router-outlet></router-outlet>
 </main>
