feat: add  role="doc-subtitle"

--- a/src/app/books/book-list-item/book-list-item.component.html
+++ b/src/app/books/book-list-item/book-list-item.component.html
@@ -5,7 +5,7 @@
   <header>
     <h2>{{ b.title }}</h2>
     @if (b.subtitle) {
-      <p>{{ b.subtitle }}</p>
+      <p role="doc-subtitle">{{ b.subtitle }}</p>
     }
   </header>
   <div>ISBN: {{ b.isbn }}</div>
