--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,14 +87,6 @@ article.book-list-item {
   padding: 0;
   background-color: var(--pico-card-sectioning-background-color);
 
-  @media screen and (max-width: 768px) {
-    grid-template-columns: 2fr 1fr;
-  }
-
-  @media screen and (max-width: 576px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
   img {
     grid-area: thumbnail;
     margin: auto;
@@ -132,6 +124,29 @@ article.book-list-item {
         var(--pico-block-spacing-horizontal);
     }
   }
+
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  @media screen and (max-width: 576px) {
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr auto;
+    gap: .5rem;
+    grid-template-areas:
+      "header header"
+      ". thumbnail"
+      "footer footer";
+
+      img {
+        border-radius: 0;
+        margin: unset;
+        box-shadow: none;
+        padding-right: 0.5rem;
+      }
+  }
+
 }
 
 header ul {
