--- a/src/app/books/book-list/book-list.component.html
+++ b/src/app/books/book-list/book-list.component.html
@@ -5,16 +5,16 @@
   <button class="secondary" (click)="clearFavList()">Clear List</button>
   <ul>
     @for (book of favoriteBooks(); track book.isbn) {
-      <li>{{ book.title }} ({{ book.isbn }})</li>
+    <li>{{ book.title }} ({{ book.isbn }})</li>
     } @empty {
-      <li>No favorites added.</li>
+    <li>No favorites added.</li>
     }
   </ul>
 </section>
 
 <hr />
 
-<form role="search">
+<div role="group">
   <input
     type="search"
     #searchInput
@@ -26,17 +26,11 @@
   <button (click)="books.reload()" [attr.aria-busy]="books.isLoading()">
     Reload
   </button>
-</form>
+</div>
 
-<ul class="book-list">
-  @for (b of books.value(); track b.isbn) {
-  <li>
-    <app-book-list-item
-      [book]="b"
-      (favAdd)="addToFavs($event)"
-    ></app-book-list-item>
-  </li>
-  } @empty {
-  <li>No books available.</li>
-  }
-</ul>
+@for (b of books.value(); track b.isbn) {
+<app-book-list-item
+  [book]="b"
+  (favAdd)="addToFavs($event)"
+></app-book-list-item>
+} @empty { No books available. }
