--- a/src/app/admin/book-create/book-create.component.html
+++ b/src/app/admin/book-create/book-create.component.html
@@ -1,2 +1,2 @@
 <h1>Create Book</h1>
-<app-book-form (submitBook)="create($event)"></app-book-form>
+<app-book-form (submitBook)="create($event)" />
