book-list-item -> book-item

--- a/src/app/books/book-list-item/book-list-item.component.html
+++ b/src/app/books/book-list-item/book-list-item.component.html
@@ -1,6 +1,6 @@
 @let b = book();
 
-<article class="book-list-item">
+<article class="book-item">
   <img [src]="b.imageUrl" alt="Cover" />
   <header>
     <h2>{{ b.title }}</h2>
